--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,14 @@
         </ul>
     </div>
     <div class="main-container">
-        <h1>Sabrina Thong</h1>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="p-3 mb-2 bg-primary text-white"><h1>Sabrina Thong</h1></div>
+            </div>
+         </div>
+         <div class="row">
+                <div class="p-3 mb-2 bg-secondary text-white"><h2>Contact</h2></div>
+            </div>
         <form>
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
@@ -42,5 +49,6 @@
         </form>
 
     </div>
+    <div class="fixed-bottom">Copyright 2019</div>
 </body>
 </html>
