--- a/index.html
+++ b/index.html
@@ -27,28 +27,36 @@
           </ul>   
 </div> 
 
+
 <div class="main-container">
     <div class="row">
         <div class="col-lg-12">
-        <h1>Sabrina Thong</h1>
+            <div class="p-3 mb-2 bg-primary text-white"><h1>Sabrina Thong</h1></div>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12">
-            <p>About Me</p>
+        <div class="col-md-4">
+            <div class="row">
+              <div class="col-md-12">
+                  <div class="p-3 mb-2 bg-secondary text-white">About Me</div>
+              </div>
+          </div>
+            <div class="row">
+              <div class="col-md-12">
+         <img src="Profile Image.jpg" alt="Profile Image" width="250px" height="300px">
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3"> <img src="Profile Image.jpg" alt="Profile Image" width="250px" height="300px" ></div>
-        <div class="col-md-9"> 
+        </div>
+      </div>
+                <div class="col-md-6"> 
             <p>Hello all! My name is Sabrina Thong and I am currently taking a coding bootcamp course at the University of Minnesota. I graduated from Jordan High School in Jordan, Minnesota and decided to go
                 to Normandale Community College to get my associate degree in general studies. After receiving my associates degree, I still had no idea what I wanted to do, so I went to Hennepin Technical 
                 college to study web design/graphic design. During that time I got to learn about web development and it caught my interest, so I looked into other classes that would teach me more about developing websites. Sadly, there
                 was a limited number of those types of classes. I found an available HTML & CSS class, so I signed up for it and really liked it. Then one day while I was scrolling through my Facebook page I 
                 see an advertisement about a coding boot camp at the University of Minnesota, so I clicked it and immediatley applied.
-              </p></div>
+              </p>
+        </div>
     </div>
-
 </div>
+<div class="fixed-bottom">Copyright 2019</div>
 </body>
 </html>
