--- a/portfolio.html
+++ b/portfolio.html
@@ -27,35 +27,43 @@
         </ul>
     </div>
 <div class="main-container">
-    <h1>Sabrina Thong</h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="p-3 mb-2 bg-primary text-white"><h1>Sabrina Thong</h1></div>
+        </div>
+    </div>
+<div class="row">
+        <div class="p-3 mb-2 bg-secondary text-white">Portfolio</div>
+</div>
 <div class="row">
     <div class="col-md-3">
-        <img src="camping.jpg" class="img-fluid" alt="Responsive image" width="200px" height="200px">
-        <h3>Camping</h3>
+        <img src="camping.jpg" class="img-fluid" alt="Responsive image" width="330px" height="300px">
+        <div class="p-3 mb-2 bg-success text-white"><h3>Camping</h3></div>
     </div>
     <div class="col-md-3">
-        <img src="computer.jpg" class="img-fluid" alt="Responsive image" width="200px" height="200px">
-        <h3>Computer</h3>
+        <img src="computer.jpg" class="img-fluid" alt="Responsive image" width="330px" height="300px">
+        <div class="p-3 mb-2 bg-success text-white"><h3>Computer</h3></div>
     </div>
 </div>
     <div class="row">
     <div class="col-md-3">
-        <img src="golf course.jpg" class="img-fluid"  alt="Responsive image" width="200px" height="200px">
-        <h3>Golf Course</h3>
+        <img src="golf course.jpg" class="img-fluid"  alt="Responsive image" width="330px" height="300px">
+        <div class="p-3 mb-2 bg-success text-white"><h3>Golf Course</h3></div>
     </div>
     <div class="col-md-3">
-        <img src="soccerball and field.jpg" class="img-fluid" alt="Responsive image" width="200px" height="200px">
-        <h3>Soccer</h3>
+        <img src="soccerball and field.jpg" class="img-fluid" alt="Responsive image" width="330px" height="300px">
+        <div class="p-3 mb-2 bg-success text-white"><h3>Soccer</h3></div>
     </div>
     </div>
     <div class="row">
-        <div class="col-lg-12">
-            <img src="travel.jpg" class="img-fluid" alt="Responsive image" width="200px" height="200px">
-            <h3>Travel</h3>
+        <div class="col-lg-3">
+            <img src="travel.jpg" class="img-fluid" alt="Responsive image" width="330px" height="300px">
+            <div class="p-3 mb-2 bg-success text-white"><h3>Travel</h3></div>
         </div>
     </div>
    
 </div>
+<div class="fixed-bottom">Copyright 2019</div>
 </body>
 
 </html>
